...
          letterSpacing: 1,
        },
      }}>
      <Tabs.Screen
        name="board"
        options={{
          title: 'BOARD',
          tabBarIcon: ({ color }) => <BoardIcon color={color} size={22} />,
        }}
      />
      <Tabs.Screen
        name="status"
        options={{
          title: 'STATUS',
          tabBarIcon: ({ color }) => <StatusIcon color={color} size={22} />,
        }}
      />
      <Tabs.Screen
        name="chain"
        options={{
          title: 'CHAIN',
          tabBarIcon: ({ color }) => <ScrollIcon color={color} size={22} />,
        }}
      />
      <Tabs.Screen
        name="gym"
        options={{
...
